<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.funders.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_investor"
        android:name="com.example.funders.ui.investor.InvestorFragment"
        android:label="@string/title_investor"
        tools:layout="@layout/fragment_investor_home" />

    <fragment
        android:id="@+id/navigation_umkm"
        android:name="com.example.funders.ui.entrepreneur.EntrepreneurFragment"
        android:label="@string/title_umkm"
        tools:layout="@layout/fragment_entrepreneur_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.funders.ui.entrepreneur.EntrepreneurFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>