<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin"
    android:background="@color/white">

    <TextView
        style="@style/H1"
        android:layout_width="209dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:text="@string/hello"
        android:textColor="@color/black" />

    <TextView
        style="@style/H1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/happy_to_see_you"
        android:textColor="@color/black" />

    <TextView
        style="@style/H4"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lets_start" />

    <com.google.android.material.textfield.TextInputLayout
        android:paddingHorizontal="12dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:hint="@string/enter_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/edittext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:paddingHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/enter_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:background="@drawable/edittext"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:paddingHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/reenter_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reenter_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:background="@drawable/edittext"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/container_all_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/all_btn"
            android:layout_gravity="center">
        </ImageButton>

        <TextView
            android:id="@+id/tv_btn_next"
            style="@style/H3B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/H5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:text="@string/have_account" />

        <TextView
            android:id="@+id/navigate_to_sign_in"
            style="@style/H5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_in"
            android:textColor="@color/purple_200" />

    </LinearLayout>

</LinearLayout>