<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.entrepreneur.EnWelcomeActivity">

    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="343dp"
        android:layout_height="347dp"
        android:layout_gravity="center"
        android:src="@drawable/hi_entrepreneur" />

    <TextView
        style="@style/H2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hai"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

    <TextView
        style="@style/H4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:layout_gravity="center"
        android:text="@string/en_start"
        android:textAlignment="center"/>

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/next2"
        android:textSize="17sp"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"
        android:layout_gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:background="@drawable/button_grey"
        android:text="@string/just_back"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@android:color/darker_gray" />

</LinearLayout>