<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    android:orientation="vertical"
    tools:context=".ui.investor.InMarketFormActivity">

    <TextView
        style="@style/H2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/form_title_2"
        android:textColor="@color/black" />

    <TextView
        style="@style/H4"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/form_2_desc_in"/>

    <com.google.android.material.textfield.TextInputLayout
        android:paddingHorizontal="12dp"
        android:layout_marginTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        app:boxStrokeWidth="0dp"
        android:hint="@string/location"
        app:hintTextColor="@color/black"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/expand"
        app:endIconTint="@color/black">

        <AutoCompleteTextView
            android:id="@+id/market_loc"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/edittext"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:paddingHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext"
        app:boxStrokeWidth="0dp"
        android:hint="@string/sector"
        app:hintTextColor="@color/black"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/expand"
        app:endIconTint="@color/black">

        <AutoCompleteTextView
            android:id="@+id/sector"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:background="@drawable/edittext"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/next"
        android:textSize="17sp"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"
        android:layout_gravity="center"/>

</LinearLayout>