<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="129dp"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="15dp"
    android:background="@drawable/list_bg"
    android:gravity="center">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/item_avatar"
        android:layout_width="87dp"
        android:layout_height="87dp"
        android:layout_marginHorizontal="16dp"
        tools:src="@tools:sample/avatars"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="3dp">

        <TextView
            android:id="@+id/item_name"
            style="@style/H3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/item_location"
            style="@style/H6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city"/>

        <TextView
            android:id="@+id/item_desc"
            style="@style/H6"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:text="@string/funding_category"
            android:textColor="@color/purple_200"/>

    </LinearLayout>

</LinearLayout>